DATE        AUTHOR    CHANGE
----------- --------- ---------------------------------------------------------
Oct-15-2001 patrick   Renamed the juggler-config script to vrjuggler-config.
Oct-12-2001 allenb    Removed vrj::Debug.  We now use vpr::Debug for all
                      debug output.  This involved introducing GUIDs for the 
                      vrj debug categories.  They can be found in Debug.h
Oct-11-2001 allenb    Added fix for synchronization errors when reading input
                      from a GlWindowXwin as a keyboard device.
Sep-21-2001 patrick   Complete restructuring of the VR Juggler source tree.
                      Headers are now rooted in a vrj directory (to match the
                      namespace), and all file names have had the "vj" prefix
                      removed.  See RELEASE_NOTES.txt for more details on
                      updating after this change.
Sep-20-2001 patrick   The default chunk description file for VR Juggler is now
                      vrj-chunks.desc.
Sep-19-2001 kevn      Now using the vrj namespace instead of the prefix "vj"
                      on classes.
Aug-27-2001 patrick   We build DLLs on Win32 now.
Aug-24-2001 allenb    Moved glWindow factory function to glDrawManager.
                      This removes the dependency that Juggler had on
                      Juggler_ogl.
Aug-22-2001 cjust     Added XML-based configuration file support to the
                      C++ side of Juggler (EnvironmentManager and ConfigIO
                      classes).
Aug-20-2001 cjust     Added a VjControl wizard for creating simulator-mode
                      configuration files.
Aug-20-2001 cjust     Merged support for XML-based configuration files in
                      VjControl.  VjControl now requires JAXP (Java API for
                      XML processing).
Aug-20-2001 cjust     Added an improved default-value handling for ChunkDescs.